# dimagi-clockify-cli

./: README.rst  config.template.yaml  pyproject.toml
dimagi_clockify_cli/: bootstrap.py  config.py  db.py  main.py  services.py  utils.py
tests/: test_config.py  test_dimagi_clockify_cli.py  test_services.py
