[tool.poetry]
name = "dimagi-clockify-cli"
version = "0.1.0"
description = "A Clockify command line interface, for the way Dimagi uses it."
authors = ["Norman Hooper <nhooper@dimagi.com>"]

[tool.poetry.scripts]
dcl = "dimagi_clockify_cli.main:app"

[tool.poetry.dependencies]
aiosqlite = "^0.17.0"
httpx = "^0.21.3"
python = "^3.8"
PyYAML = "^6.0"
sqlmodel = "^0.0.6"
typer = {extras = ["all"], version = "^0.4.0"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
